k8s/namespaces.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: mlops-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: mlops-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: mlops-prod
